[metadata]
name = climate_calculation
author = Jorrit van der Schot
author_email = jorrit.van-der-schot@uni-graz.at
license = 
description = Several climate calculations with data from AWS in Austria
long_description_content_type=
long_description =
url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = .
setup_requires =
    setuptools_scm
python_requires = >=3.7
install_requires =
    pandas >= 1.5.1

[options.package_data]
* =
    data/*.csv

[options.entry_points]
console_scripts =
  climate_calculation = climate_calculation.cli:climate_calculation

